﻿
15/4/2016:
* FIX: various fixed in type annotations, type evaluation etc
* UP: wildcards can now be type expressions too (not only type patterns as before)
* FIX: when dealing with type annotations, new type variables are added to the prefix - only those which were not already in it
* FIX: generalization of non-top-level type variables has been restored


12/4/2016:
* FIX: node kind annotation of type expressions has been fixed
* FIX: free vars of type annotations are now inserted into the prefix
* BUG: scoped vars are not generalized at top level


11/4/2016:
* FIX: parser reduce/reduce conflicts fixed
* UP: type function definition now supports co-domain kind annotation, similarly to type annotation of return type in function bindings
* REFACT: monad builders polished and added methods for annotating inferred kind or type into nodes
* REFACT: node class now has only 1 type parameter; member 'typed' has now type object and can be freely used for annotating whatever stuff for the price of one dynamic cast
* UP: both kind inference and type inference now annotate the inferred kind (or type) within the node


6/4/2016:
* REFACT: big refactor of AST, annotations, cases, patterns and so on


4-5/4/2016:
* FIX: some fixes in typing annotations at binding site
* REFACT: AST annotation subsystem is under redesign
* REFACT: factories for lambdas have been polished
* REFACT: various renamings and refactors in AST
* REFACT: qbinding record type has been extended to support return type annotations and rec bindings alike; rec_qbinding does not exist anymore
* UP: let bindings support


2/4/2016:
* UP: all annotations, except let rec bindings, are now flex types
* FIX: annotated lambda parameters are syntactically patt_app_atoms, which means flex types are accepted by the parser: F-type check is done at typing-time
* UP: UnitTest flags now support showing input and parsed input, and forcing show of successful esits


1/4/2016: